logs/tornado-cli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado_cli'...
Compiling './lib/python3.5/site-packages/tornado_cli/__init__.py'...
***   File "./lib/python3.5/site-packages/tornado_cli/__init__.py", line 16
    exec 'from commands.%s import command' % command
                                         ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/tornado_cli/commands'...
Compiling './lib/python3.5/site-packages/tornado_cli/commands/help.py'...
***   File "./lib/python3.5/site-packages/tornado_cli/commands/help.py", line 2
    print 'Usage: tcli COMMAND or tornado_cli COMMAND\n'
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tornado_cli/commands/startproject.py'...
***   File "./lib/python3.5/site-packages/tornado_cli/commands/startproject.py", line 18
    print "%r conflicts with the name of an existing Python module and cannot be used as a project name. Please try another name." % dir_name
                                                                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tornado_cli/project_template'...
Compiling './lib/python3.5/site-packages/tornado_cli/project_template/app.py'...
***   File "./lib/python3.5/site-packages/tornado_cli/project_template/app.py", line 20
    print 'Tornado server started on port %s' % options.port
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tornado_cli/project_template/handlers'...
Listing './lib/python3.5/site-packages/tornado_cli/project_template/logconfig'...
Compiling './lib/python3.5/site-packages/tornado_cli/project_template/logconfig/dictconfig.py'...
***   File "./lib/python3.5/site-packages/tornado_cli/project_template/logconfig/dictconfig.py", line 292
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tornado_cli/project_template/media'...
Listing './lib/python3.5/site-packages/tornado_cli/project_template/templates'...
Listing './lib/python3.5/site-packages/tornado_cli/project_template/tests'...
Listing './lib/python3.5/site-packages/tornado_cli-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
